Criando cancelar e reagendar consultas, atualiizando swagger docs e adicionando nova coluna no banco
